--- a/index (3).html
+++ b/index (3).html
@@ -88,7 +88,7 @@
        <div class="row">
          <div class="col">
            <div class="card" style="width: 18rem;">
-             <img class="card-img-top" src="https://images.somethinc.com/uploads/products/thumbs/800x800/%5B3_PCS_WEB%5D_PAKET_BERLIAN_MOISTURIZER_Meratakan_Tekstur_Kulit___Mencerahkan.jpg" alt="Card image cap">
+             <img class="card-img-top" src="https://i.pinimg.com/564x/b8/a3/55/b8a3553d159300fad8d46ab3448367ad.jpg" alt="Card image cap">
              <div class="card-body">
                <h5 class="card-title">Card title</h5>
                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -98,7 +98,7 @@
          </div>
          <div class="col">
            <div class="card" style="width: 18rem;">
-             <img class="card-img-top" src="https://images.soco.id/797-you-sunbrella-triple-uv-elixir-sunscreen-untuk-kulit-berminyak-2.jpg.jpeg" alt="Card image cap">
+             <img class="card-img-top" src="https://i.pinimg.com/564x/92/70/01/927001e7eae7efbb3d320a7028a3e252.jpg" alt="Card image cap">
              <div class="card-body">
                <h5 class="card-title">Card title</h5>
                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -108,7 +108,7 @@
          </div>
          <div class="col">
            <div class="card" style="width: 18rem;">
-             <img class="card-img-top" src="https://images.somethinc.com/uploads/products/thumbs/800x800/%5B3_PCS_WEB%5D_PAKET_BERLIAN_MOISTURIZER_Meratakan_Tekstur_Kulit___Mencerahkan.jpg" alt="Card image cap">
+             <img class="card-img-top" src="https://i.pinimg.com/564x/b6/3f/b6/b63fb6a5fcabf735602c50d1f53d93a1.jpg" alt="Card image cap">
                <div class="card-body">
                  <h5 class="card-title">Card title</h5>
                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -118,6 +118,7 @@
         </div>
       </div>
 
+      
  
       <div class="container text-center mb-5">
       <div class="row">
